css/elements.scss
.rslides {
  position: relative;
  list-style: none;
  overflow: hidden;
  max-width: 1200px;
  padding: 0;
  margin: 0 auto;
}

.rslides li {
  -webkit-backface-visibility: hidden;
  position: absolute;
  display: none;
  width: 100%;
  left: 0;
  top: 0;
}

.rslides li:first-child {
  position: relative;
  display: block;
  float: left;
}

.rslides img {
  display: block;
  float: left;
  width: 100%; 
  height:auto;
  @media only screen and (max-width:$maxwidth) {
    width:200%;
    margin-left:-50%;
    
  }
  border: 0;
}

.blog-list:first-child {
    padding-top:1em;
    border-top: 1px solid $themecolor;
}
.blog-list {
    padding-bottom:1em;
    border-bottom: 1px solid $themecolor;
}
.picture-fly {
    background:url(/assets/fly20100222.jpg);
    background-size:cover;
}
.picture-sofa {
    background:url(../assets/sofa1.jpg);
    background-size:cover;
    background-position:center;
}
.picture-street {
    background:url(/assets/street-20090108.jpg);
    background-size:cover;
    background-position:center;
}
.picture-worldasday {
    background:url(/assets/picture-worldasday.png);
    background-size:cover;
    background-position:center;
}
 .picture-project-photography {
    background:url(/assets/projects-photography.jpg);
    background-size:cover;
    background-position:center;
}
.picture-project-immerse {
    background:url(/assets/projects-immerse.png);
    background-size:cover;
    background-position:center;
}
.picture-project-googlepack {
    background:url(/assets/projects-googlepack.jpg);
    background-size:cover;
    background-position:center;
}
.picture-project-batchwebfont {
    background:url(/assets/projects-batchwebfont.png);
    background-size:cover;
    background-position:center;
}
.picture-project-designmanifesto {
    background:url(/assets/projects-designmanifesto.png);
    background-size:cover;
    background-position:center;
}
.picture-project-branding {
    background:url(/assets/projects-branding.png);
    background-size:cover;
    background-position:center;
}
.picture-me {
    background:url(/assets/my-ugly-mug.png);
    background-size:cover;
    background-position:center;
}
.picture-404 {
    background:url(/assets/404.png);
    background-size:cover;
    background-position:center;
}
.picture-403 {
    background:url(/assets/403.png);
    background-size:cover;
    background-position:center;
}
.white {
    background-color:#fff;
}
.red {
    background-color:#be4040;
}
.blue {
    background-color:#4078be;
}
.green {
    background-color:#40be4c;
}
.purple {
    background-color:#a540be;
}
.yellow {
    background-color:#f5dd11;
}
.dark {
    background-color:#1f1f1f;
}
.light {
    background-color:#f1f1f1;
}
.theme {
    background-color:$themecolor;
}
.bodytheme {
    background-color:$bodythemecolor;
}
.bk-whitewall {
    background-image:url(../assets/whitewallbk.png);
    background-repeat:both;
}
.bk-smallgrid {
    background-image:url(../assets/smallgrid.png);
    background-repeat:both;
}
.bk-dark {
    background-image:url(../assets/darkbk.png);
    background-repeat:both;
}
.bk-shadow {
    -moz-box-shadow:    0px 3px 10px 0px #808080;
    -webkit-box-shadow: 0px 3px 10px 0px #808080;
    box-shadow:         0px 3px 10px 0px #808080;
}
.border-top {
    border-top: 1px solid $themecolor;
}
.border-bottom {
    border-bottom: 1px solid $themecolor;
}
.border-bottom-zigzag:after {
    content: " ";
    display:block;
    position: relative;
    width: 100%;
    bottom:-1.5em;
    height:30px;
    background: -webkit-linear-gradient(225deg, transparent 65%, white 65%) 0 50%, -webkit-linear-gradient(315deg, transparent 65%, white 65%) 0 50%;
    background: -moz-linear-gradient(225deg, transparent 65%, white 65%) 0 50%, -moz-linear-gradient(315deg, transparent 65%, white 65%) 0 50%;
    background: -o-linear-gradient(225deg, transparent 65%, white 65%) 0 50%, -o-linear-gradient(315deg, transparent 65%, white 65%) 0 50%;
    background-repeat: repeat-x;
    background-size: 30px 30px, 30px 30px;
}
.border-top-zigzag:before {
    content: " ";
    display:block;
    position: relative;
    width: 100%;
    bottom:1.5em;
    height:30px;
    background: -webkit-linear-gradient(45deg, transparent 65%, white 65%) 0 50%, -webkit-linear-gradient(135deg, transparent 65%, white 65%) 0 50%;
    background: -moz-linear-gradient(45deg, transparent 65%, white 65%) 0 50%, -moz-linear-gradient(135deg, transparent 65%, white 65%) 0 50%;
    background: -o-linear-gradient(45deg, transparent 65%, white 65%) 0 50%, -o-linear-gradient(135deg, transparent 65%, white 65%) 0 50%;
    background-repeat: repeat-x;
    background-size:30px 30px, 30px 30px;
}
.btn-twitter {
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    border-style:solid;
    border-width:1px;
    border-color:#00aced;
    line-height:inherit;
    padding:0.5em 1.5em 0.5em 1.5em;
}
.btn-twitter:hover {
    background-color:#00aced;
    color:#ffffff;
}
.btn-facebook {
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    border-style:solid;
    border-width:1px;
    border-color:#3b5998;
    line-height:inherit;
    padding:0.5em 1.5em 0.5em 1.5em;
}
.btn-facebook:hover {
    background-color:#3b5998;
    color:#ffffff;
}



/* DISQUS THEME */
#disqus_thread a {
    font-family: 'Open Sans', Helvetica, sans-serif; 
    color: $themecolor;
    text-decoration: underline;
}
#disqus_thread a:hover {
    text-decoration: none;
}
#disqus_thread p {
    font-family: 'Open Sans', Helvetica, sans-serif;
}

